--- a/app3/public/index.html
+++ b/app3/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Kata 3: Add and remove objects</title>
+    <title>Kata 3: Filter, show and hide objects</title>
   </head>
   <body>
     <noscript>
